package pl.klinika.Core;

public class WeterynarzNieZnalezionyException extends RuntimeException {
    public WeterynarzNieZnalezionyException(String message) {
        super(message);
    }
}
