package pl.klinika.Uzytkownik;

import org.springframework.data.jpa.repository.JpaRepository;

public interface KlientRepository extends JpaRepository<Klient, Integer> {
}

