package pl.klinika.Zwierze;

import org.springframework.data.jpa.repository.JpaRepository;

public interface ZwierzeRepository extends JpaRepository<Zwierze, Integer> {
}
